Updated project to Java 24 (#599)
* Update version to start feature: AR-577-Java-24-Update

* Updated maven wrapper to 3.9.10

* Updated property & fields to Java 24

* Removed --enable-preview from codebase

* Added Maven Dependency Analyzer Version & Maven Dependency Plugin Fix

* Gonna test stuff

* Cleaned up pom a bit

* Cleaned up Pom

* Updated openjfx version to 24.0.1

* Updated the GH Actions

* Update version to finish feature: AR-577-Java-24-Update

---------

Co-authored-by: OmOmofonmwan <omomofonmwan@tinkarbuild.com>
Co-authored-by: Carl Dea <carl.dea@gmail.com>